--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
 spring.application.name=book-Webservice
-
-spring.cloud.config.uri=http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
+#spring.cloud.config.uri=http://localhost:8888
+my.greetings=Hello
+#spring.profiles.active=test
+#management.endpoints.web.exposure.include="*"
+#management.health.defaults.enabled=false
